<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alarmclock_footer">你可以直接对闹钟说\n“小爱同学，每天早上7点叫醒我”\n“小爱同学，15分钟后提醒我揭面膜”</string>
    <string name="time_after_hint_day">%1$s天%2$s小时%3$s分钟后响铃</string>
    <string name="time_after_hint_hour">%1$s小时%2$s分钟后响铃</string>
    <string name="time_after_hint_minute">%1$s分钟后响铃</string>
    <string name="error_text">设备离线，请检查网络连接</string>
    <string name="netfail_text">手机网络不可用，请检查网络连接</string>
    <string name="nodata_text">暂时没有获取到数据</string>
    <string name="circle_once">一次</string>
    <string name="circle_workday">工作日</string>
    <string name="circle_montofri">周一到周五</string>
    <string name="circle_oeveryday">每天</string>
    <string name="circle_holiday">节假日</string>
    <string name="circle_weekend">周末</string>
    <string name="circle_everyweek">每周</string>
    <string name="circle_monthly">每月</string>
    <string name="circle_yearly">每年</string>
    <string name="home_delete_cancel">取消</string>
    <string name="home_delete_chose">请选择条目</string>
    <string name="home_delete_all">全选</string>
    <string name="home_delete_none">全不选</string>
    <string name="alarmclock_close_title">关闭重复闹钟</string>
    <string name="alarmclock_close_once">仅在%1$s关闭一次</string>
    <string name="alarmclock_close_all">关闭这个重复闹钟</string>
    <string name="alarmclock_close_today">（今天）</string>
    <string name="alarmclock_close_tomorrow">（明天）</string>
    <string name="dataformat_month_day">MM月dd日</string>
    <string name="alarmclock_close_cancel">取消</string>
    <string name="alarmcreate_repeat_title">重复</string>
    <string name="alarmcreateclose_repeat_title">结束重复</string>
    <string name="alarmcreate_repeat_content">请选择</string>
    <string name="alarmcreate_audio_title">铃声</string>
    <string name="alarmcreate_continue_sleep">贪睡</string>
    <string name="alarmcreate_desc_title">备注</string>
    <string name="alarmcreate_auto_delete">响铃后删除此闹钟</string>
    <string name="alarmcreate_desc">闹钟备注</string>
    <string name="alarmcreate_desc_hint">输入备注</string>
    <string name="alarmcreate_repeat_once">只响一次</string>
    <string name="alarmcreate_repeat_everyday">每天</string>
    <string name="alarmcreate_repeat_workday">法定工作日（智能跳过节假日）</string>
    <string name="alarmcreate_repeat_holiday">法定节假日（智能跳过工作日）</string>
    <string name="alarmcreate_repeat_custom">自定义</string>
    <string name="alarmcreate_custom_title">自定义重复</string>
    <string name="alarmclock_monday">星期一</string>
    <string name="alarmclock_tuesday">星期二</string>
    <string name="alarmclock_wednesday">星期三</string>
    <string name="alarmclock_thursday">星期四</string>
    <string name="alarmclock_friday">星期五</string>
    <string name="alarmclock_saturday">星期六</string>
    <string name="alarmclock_sunday">星期日</string>
    <string name="alarmclock_monday_list">周一</string>
    <string name="alarmclock_tuesday_list">周二</string>
    <string name="alarmclock_wednesday_list">周三</string>
    <string name="alarmclock_thursday_list">周四</string>
    <string name="alarmclock_friday_list">周五</string>
    <string name="alarmclock_saturday_list">周六</string>
    <string name="alarmclock_sunday_list">周日</string>
    <string name="alarmcreate_custom_cancel">取消</string>
    <string name="alarmcreate_custom_confirm">确定</string>
    <string name="alarmcreate_sleep_confirm">我知道了</string>
    <string name="alarmcreate_desc_cancel">取消</string>
    <string name="alarmcreate_desc_confirm">保存</string>
    <string name="notifycreate_name">事件</string>
    <string name="notifycreate_desc_hint">输入事件</string>
    <string name="notifycreate_time">时间</string>
    <string name="notifycreate_hint">标记</string>
    <string name="notifycreate_hint_none">无</string>
    <string name="notifycreate_repeat_once">永不</string>
    <string name="notifycreate_repeat_everyday">每天</string>
    <string name="notifycreate_repeat_everyweek">每周</string>
    <string name="notifycreate_repeat_twoweek">每两周</string>
    <string name="notifycreate_repeat_everymonth">每月</string>
    <string name="notifycreate_repeat_everyyear">每年</string>
    <string name="notifycreate_repeat_custom">自定义</string>
    <string name="notifycreate_desc_title">标记</string>
    <string name="notifycreate_desc_none">无</string>
    <string name="notifycreate_reqpestclose_title">结束重复</string>
    <string name="notifycreate_hour_minute">%02$d:%02$d</string>
    <string name="timecount_stop">结束</string>
    <string name="timecount_start">启动</string>
    <string name="timecount_pause">暂停</string>
    <string name="timecount_continue">继续</string>
    <string name="timecount_historyuse">常用倒计时</string>
    <string name="timecount_runhint">请在米家智能闹钟上查看倒计时</string>
    <string name="timecount_addhistory">添加至常用倒计时</string>
    <string name="timecount_exit">已存在%1$02d分%2$02d秒的倒计时</string>
    <string name="timecount_history_item">%1$02d分%2$02d秒</string>
    <string name="timecount_stop_ask">确定要结束倒计时么？</string>
    <string name="timecount_stop_ask_yes">结束</string>
    <string name="timecount_stop_ask_no">不结束</string>
    <string name="home_name_alarm">闹钟</string>
    <string name="home_name_notify">提醒</string>
    <string name="home_name_timecount">倒计时</string>
    <string name="home_name_action">技能中心</string>
    <string name="home_name_delete">删除</string>
    <string name="alarmclock_closestatus">未开启</string>
    <string name="alarmcreate_sleep_hint">开启[贪睡]后，闹钟响铃时需要长按顶部按钮关闭</string>
    <string name="alarmcreate_title">设置闹钟</string>
    <string name="alarmcreate_sleep_check">不在提示</string>
    <string name="alarmclock_close_circle_hint">请选择重复类型</string>
    <string name="alarmclock_close_desc_hint">请添加描述</string>
    <string name="alarmclock_close_time_hint">请选择时间</string>
    <string name="picker_second">秒</string>
</resources>