<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:gravity="center"
                android:paddingLeft="@dimen/std_titlebar_margin_left_right"
                android:paddingRight="@dimen/std_titlebar_margin_left_right"
                android:scaleType="center"
                android:text="@string/home_delete_cancel"
                android:textColor="@color/home_cancel"
                android:textSize="@dimen/std_word_001" />

            <TextView
                style="@style/std_word_001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/titlebar_return_area_size"
                android:layout_marginRight="@dimen/titlebar_return_area_size"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/home_delete_chose" />


            <TextView
                android:id="@+id/tvAll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:gravity="center"
                android:paddingLeft="@dimen/std_titlebar_margin_left_right"
                android:paddingRight="@dimen/std_titlebar_margin_left_right"
                android:text="@string/home_delete_all"
                android:textColor="@color/home_cancel"
                android:textSize="@dimen/std_word_001"
                android:visibility="visible" />
        </FrameLayout>
        <!--std_titlebar_device_color_two.xml-->
        <include layout="@layout/title_bar_black" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alarmclock_control_bottom"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alarmclock_control_bottom"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tv0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_checkbox_blue"
                android:gravity="center"
                android:text="@string/home_name_alarm"
                android:textColor="@color/home_tab_name"
                android:textSize="@dimen/home_tab_name" />

            <RadioButton
                android:id="@+id/tv1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_checkbox_blue"
                android:gravity="center"
                android:text="@string/home_name_notify"
                android:textColor="@color/home_tab_name"
                android:textSize="@dimen/home_tab_name" />

            <RadioButton
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_checkbox_blue"
                android:gravity="center"
                android:text="@string/home_name_timecount"
                android:textColor="@color/home_tab_name"
                android:textSize="@dimen/home_tab_name" />

            <RadioButton
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/select_checkbox_blue"
                android:gravity="center"
                android:text="@string/home_name_action"
                android:textColor="@color/home_tab_name"
                android:textSize="@dimen/home_tab_name" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/select_checkbox_blue"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/home_name_delete"
            android:textColor="@color/home_tab_delete"
            android:textSize="@dimen/home_tab_delete" />
    </LinearLayout>

</LinearLayout>