<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_eeeeee"
            android:orientation="vertical">

            <com.tinymu.clock.widget.TimeDownView
                android:id="@+id/tdv"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/timecount_runhint"
                android:textColor="#afafaf"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_eeeeee"
            android:orientation="vertical">

            <com.xiaomi.smarthome.common.ui.widget.TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:id="@+id/time_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/timecount_addhistory"
                android:textColor="@color/color_5566ff"
                android:textSize="12sp" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWhite"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/item_left_icon"
            android:layout_weight="1"
            android:background="@drawable/rect_5566ff_edge_3"
            android:gravity="center"
            android:text="@string/timecount_stop"
            android:textColor="@color/color_5566ff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvBlue"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/item_left_icon"
            android:layout_weight="1"
            android:background="@drawable/rect_5566ff_3"
            android:gravity="center"
            android:text="@string/timecount_start"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/timecount_historyuse"
        android:textColor="#afafaf"
        android:textSize="12sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>